--- a/index.html
+++ b/index.html
@@ -114,5 +114,132 @@
         </div>
       </div>
     </div>
+
+    <!-- assignment of class 7 -->
+    <!-- choose area -->
+    <div class="cta-area">
+      <div class="container">
+        <div class="cta-inner">
+          <div class="cta-text">
+            <h4>Our Strength</h4>
+            <h2>Why do people choose FILA?</h2>
+            <p>
+              Sodales tempor sapien quaerat ipsum congue and undo laoreet turpis
+              neque auctor turpis vitae dolor luctus placerat magna ligula
+              cursus vitae
+            </p>
+            <ul>
+              <li>
+                Tempor sapien quaerat undo ipsum laoreet and purus sapien a
+                dolor ociis ultrice ipsum aliquam congue a dolor cursus congue
+                varius magnis
+              </li>
+              <li>
+                Cursus purus suscipit vitae cubilia magnis diam volute egestas
+                sapien ultrice auctor
+              </li>
+            </ul>
+          </div>
+          <div class="cta-boxes">
+            <div class="single-cta-boxes">
+              <div class="single-cta-inner-boxes">
+                <div class="cta-icon-box">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="size-6"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"
+                    />
+                  </svg>
+                </div>
+                <h3>Healthy</h3>
+                <p>
+                  You can order or book any type of pizza by using our website.
+                </p>
+              </div>
+            </div>
+            <div class="single-cta-boxes">
+              <div class="single-cta-inner-boxes">
+                <div class="cta-icon-box">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="size-6"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M15.59 14.37a6 6 0 0 1-5.84 7.38v-4.8m5.84-2.58a14.98 14.98 0 0 0 6.16-12.12A14.98 14.98 0 0 0 9.631 8.41m5.96 5.96a14.926 14.926 0 0 1-5.841 2.58m-.119-8.54a6 6 0 0 0-7.381 5.84h4.8m2.581-5.84a14.927 14.927 0 0 0-2.58 5.84m2.699 2.7c-.103.021-.207.041-.311.06a15.09 15.09 0 0 1-2.448-2.448 14.9 14.9 0 0 1 .06-.312m-2.24 2.39a4.493 4.493 0 0 0-1.757 4.306 4.493 4.493 0 0 0 4.306-1.758M16.5 9a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
+                    />
+                  </svg>
+                </div>
+                <h3>Fast Delivery</h3>
+                <p>
+                  You can order or book any type of pizza by using our website.
+                </p>
+              </div>
+            </div>
+            <div class="single-cta-boxes">
+              <div class="single-cta-inner-boxes">
+                <div class="cta-icon-box">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="size-6"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M15.59 14.37a6 6 0 0 1-5.84 7.38v-4.8m5.84-2.58a14.98 14.98 0 0 0 6.16-12.12A14.98 14.98 0 0 0 9.631 8.41m5.96 5.96a14.926 14.926 0 0 1-5.841 2.58m-.119-8.54a6 6 0 0 0-7.381 5.84h4.8m2.581-5.84a14.927 14.927 0 0 0-2.58 5.84m2.699 2.7c-.103.021-.207.041-.311.06a15.09 15.09 0 0 1-2.448-2.448 14.9 14.9 0 0 1 .06-.312m-2.24 2.39a4.493 4.493 0 0 0-1.757 4.306 4.493 4.493 0 0 0 4.306-1.758M16.5 9a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
+                    />
+                  </svg>
+                </div>
+                <h3>Healthy</h3>
+                <p>
+                  You can order or book any type of pizza by using our website.
+                </p>
+              </div>
+            </div>
+            <div class="single-cta-boxes">
+              <div class="single-cta-inner-boxes">
+                <div class="cta-icon-box">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="size-6"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M15.59 14.37a6 6 0 0 1-5.84 7.38v-4.8m5.84-2.58a14.98 14.98 0 0 0 6.16-12.12A14.98 14.98 0 0 0 9.631 8.41m5.96 5.96a14.926 14.926 0 0 1-5.841 2.58m-.119-8.54a6 6 0 0 0-7.381 5.84h4.8m2.581-5.84a14.927 14.927 0 0 0-2.58 5.84m2.699 2.7c-.103.021-.207.041-.311.06a15.09 15.09 0 0 1-2.448-2.448 14.9 14.9 0 0 1 .06-.312m-2.24 2.39a4.493 4.493 0 0 0-1.757 4.306 4.493 4.493 0 0 0 4.306-1.758M16.5 9a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
+                    />
+                  </svg>
+                </div>
+                <h3>Healthy</h3>
+                <p>
+                  You can order or book any type of pizza by using our website.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
